# ChangeLog for sci-mathematics/burrtools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Apr 2011; Justin Lecher <jlec@gentoo.org> burrtools-0.5.2-r1.ebuild:
  Corrected Slot of fltk to 1

*burrtools-0.5.2-r1 (09 Mar 2010)

  09 Mar 2010; Sébastien Fabbro <bicatali@gentoo.org>
  -burrtools-0.5.2.ebuild, +burrtools-0.5.2-r1.ebuild:
  Added online documentation generation (from Andreas Röver)

*burrtools-0.5.2 (13 Jan 2010)

  13 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +burrtools-0.5.2.ebuild, +metadata.xml:
  Initial import. Ebuild initially submitted by Andreas Röver, bug #171816
