@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/burrtools
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  sci-mathematics/burrtools: Updating remote-id in metadata.xml
 
   05 Apr 2011; Justin Lecher <jlec@gentoo.org> burrtools-0.5.2-r1.ebuild:
   Corrected Slot of fltk to 1
@@ -16,4 +19,3 @@
   13 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org>
   +burrtools-0.5.2.ebuild, +metadata.xml:
   Initial import. Ebuild initially submitted by Andreas Röver, bug #171816
-
